tests/baselines/reference/contextualTyping5.errors.txt
==== tests/cases/compiler/contextualTyping5.ts (1 errors) ====
    class foo { public bar:{id:number;} = { }; }
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert '{}' to '{ id: number; }':
!!! 	Type '{}' is missing property 'id' from type '{ id: number; }'.